# better-default-derive

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: progress.rs
tests/bad/: 01-enum-empty.rs  01-enum-empty.stderr  01-struct.rs  01-struct.stderr  02-empty.stderr  02-enum-multiple-default.rs  02-enum-multiple-default.stderr  03-missing-default.rs  03-missing-default.stderr  03-more-than-one.stderr
tests/good/: 01-enum-unit.rs  01-unit.rs  02-enum-unnamed.rs  03-enum-named.rs  04-enum-generic.rs  04-generics.rs  05-enum-interaction-std.rs  05-interaction-std.rs  06-struct-unit.rs  07-struct-unnamed.rs  08-struct-named.rs  09-struct-generic.rs
