[package]
name = "better-default-derive"
version = "0.1.0"
description = "A better Default macro"
authors = ["Arnau Abella <arnau.abella@monadplus.pro"]
edition = "2021"
license = "MIT"
repository = "https://github.com/monadplus/better-default-derive"
readme = "README.md"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0" } #features = ["extra-traits"]

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
